force-app/main/default/objects/EC_StagingExceptionLog__c/EC_StagingExceptionLog__c.object-meta.xml
<CustomObject>
    <description>to log exceptions of EC_Mulesoft_CDM_Staging__c records</description>
    <label>Staging Exception Log</label>
    <nameField>
        <displayFormat>SG-{000000}</displayFormat>
        <label>StageExceptionLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>