force-app/main/default/objects/EC_StagingExceptionLog__c/fields/EC_Account_key__c.field-meta.xml
<CustomField>
    <fullName>EC_Account_key__c</fullName>
    <label>EC_Account_key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>