force-app/main/default/objects/EC_StagingExceptionLog__c/fields/EC_Action__c.field-meta.xml
<CustomField>
    <fullName>EC_Action__c</fullName>
    <label>EC_Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>