force-app/main/default/objects/EC_StagingExceptionLog__c/fields/EC_ClassName__c.field-meta.xml
<CustomField>
    <fullName>EC_ClassName__c</fullName>
    <label>EC_ClassName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>