force-app/main/default/objects/EC_StagingExceptionLog__c/fields/EC_Division__c.field-meta.xml
<CustomField>
    <fullName>EC_Division__c</fullName>
    <label>EC_Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>