force-app/main/default/objects/EC_StagingExceptionLog__c/fields/EC_Email__c.field-meta.xml
<CustomField>
    <fullName>EC_Email__c</fullName>
    <label>EC_Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>