force-app/main/default/objects/EC_StagingExceptionLog__c/fields/EC_ExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>EC_ExceptionMessage__c</fullName>
    <label>EC_ExceptionMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>