force-app/main/default/objects/EC_StagingExceptionLog__c/fields/EC_MethodName__c.field-meta.xml
<CustomField>
    <fullName>EC_MethodName__c</fullName>
    <label>EC_MethodName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>