force-app/main/default/objects/EC_StagingExceptionLog__c/fields/EC_MuleStageId__c.field-meta.xml
<CustomField>
    <fullName>EC_MuleStageId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EC_StageId</label>
    <referenceTo>EC_Mulesoft_CDM_Staging__c</referenceTo>
    <relationshipLabel>Staging Exception Logs</relationshipLabel>
    <relationshipName>Staging_Exception_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>