force-app/main/default/objects/EC_StagingExceptionLog__c/fields/EC_ParentAccountKey__c.field-meta.xml
<CustomField>
    <fullName>EC_ParentAccountKey__c</fullName>
    <label>EC_ParentAccountKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>