force-app/main/default/objects/EC_StagingExceptionLog__c/fields/EC_PartnerFunction__c.field-meta.xml
<CustomField>
    <fullName>EC_PartnerFunction__c</fullName>
    <label>EC_PartnerFunction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>