force-app/main/default/objects/EC_StagingExceptionLog__c/fields/EC_PermissionCode__c.field-meta.xml
<CustomField>
    <fullName>EC_PermissionCode__c</fullName>
    <label>EC_PermissionCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>