force-app/main/default/objects/EC_StagingExceptionLog__c/fields/EC_SourceTable__c.field-meta.xml
<CustomField>
    <fullName>EC_SourceTable__c</fullName>
    <label>EC_SourceTable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>