force-app/main/default/objects/EC_StagingExceptionLog__c/fields/EC_UserKey__c.field-meta.xml
<CustomField>
    <fullName>EC_UserKey__c</fullName>
    <label>EC_UserKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>