force-app/main/default/objects/EC_StagingExceptionLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>EC_ExceptionMessage__c</columns>
    <columns>EC_MethodName__c</columns>
    <columns>EC_ClassName__c</columns>
    <columns>EC_SourceTable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EC_MethodName__c</field>
        <operation>equals</operation>
        <value>userInsert</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>